syntax = "proto3";

enum ResultCode{
  RESULT_CODE_EMPTY = 0; // due to the bug of scalapbc, do not use EMPTY in your code

  // success
  SUCCESS = 1;

  // internal error
  INTERNAL_SERVER_ERROR = 10000;

  // message error
  REQUEST_RESOURCE_NOT_FOUND = 10001;
  METHOD_NOT_ALLOW = 10002;
  MESSAGE_TYPE_ERROR = 10003;
  INVALID_MESSAGE = 10004;

  // request param error
  INVALID_REQUEST_ARGUMENT = 20001;

  // order error
  ORDER_NOT_EXISTED = 30001;
  INVALID_ORDER_STATE = 30002;
}

message ResponseHeader{
  ResultCode result = 1;
  string result_description = 2;
}